--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,9 +15,24 @@
 		"sourceMap": true,
 		"noImplicitReturns": true,
 		"noUnusedParameters": true,
-		"noUnusedLocals": true
+		"noUnusedLocals": true,
+		"types": [
+			"react",
+			"react-native",
+			"jest"
+		]
 	},
-	"types": ["react", "react-native", "jest"],
-	"exclude": ["android", "App.js", "ios", "build", "node_modules"],
+	"types": [
+		"react",
+		"react-native",
+		"jest"
+	],
+	"exclude": [
+		"android",
+		"App.js",
+		"ios",
+		"build",
+		"node_modules"
+	],
 	"compileOnSave": false
 }
