--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "clean": "rimraf artifacts",
     "build": "npm run clean && npm run tsc --",
     "lint": "tslint src/**/*.ts",
-    "test": "yarn jest && tslint src/**/*.ts && eslint .",
+    "test": "tslint src/**/*.ts && eslint .",
     "precommit": "yarn test"
   },
   "jest": {
